# ha-midas

./: .devcontainer.json  .gitignore  .ruff.toml  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml
config/: configuration.yaml
custom_components/midas/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  data.py  manifest.json  sensor.py
custom_components/midas/translations/: en.json
scripts/: coverage  develop  setup
tests/: __init__.py  conftest.py  test_config_flow.py  test_sensor.py
