[tool.setuptools]
packages = []

[project]
name = "ha-midas"
version = "1.0.2"
dependencies = [
    "california-midasapi==1.0.2"
]

[project.optional-dependencies]
dev = [
    "colorlog==6.10.1",
    "homeassistant==2024.12.0",
    "pip>=21.3.1",
    "ruff==0.14.3"
]
test = [
    "ha-midas[dev]", #all dev dependencies plus...
    "aiodiscover",
    "ulid_transform",
    "pytest",
    "coverage",
    "pytest-asyncio",
    "pytest-aiohttp",
    "pytest-homeassistant-custom-component"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" # https://github.com/MatthewFlamm/pytest-homeassistant-custom-component/issues/206